--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -7,6 +7,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/22/n11673471.md#1" target="_blank">程晓容：国际风云印证《九评》精准论断</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/22/n11673471.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911120304312188-150x120.jpg" align ="left"></a>《九评》关乎中国和世界。这部巨著能够帮助人们深入了解中国现当代史及共产主义运动，从而对中共的言行及动机做出清醒的判断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 4:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666092.md#1" target="_blank">九评15周年 看大陆民众弃中共 句句真情</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666092.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/a9001d8cd57c0fd94b9b45db8a1c1bc6-600x399-150x120.jpg" align ="left"></a>15年前，大纪元在2004年11月19日发表了《九评共产党》系列社论，使广大民众第一次深刻和全面地了解中共的丑陋历史和邪恶本质，从而走上抛弃中共的自救之路——三退（退出中共党、团、队组织）。如今3亿4千多万的民众声明退出中共的一切组织，走向新生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 9:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666926.md#1" target="_blank">《九评》发表15周年 加拿大各界华人在觉醒</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666926.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/04-1-1-150x120.jpg" align ="left"></a>2004年11月19日，《大纪元时报》系列社论《九评共产党》（简称《九评》）横空出世，被世人喻为旷世奇书，并打出“天灭中共”的震世警言，引发了持续15年的“三退”（退共产党、退共青团、退少先队）大潮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11678229.md#1" target="_blank">每日三退声明精选（2019/11/24）</a><br></h3>我几乎天天看大纪元、新唐人，使我更加看清了共产党的邪恶本质，并在力所能及条件下，揭露中共，弘扬自由、民主、法治的普世价值观，为中国民族的觉醒和未来，奋笔疾书，尽量感染身边的每一个人，家人、亲戚、朋友、同学，特别是今年以来的中美贸易战和香港民众反送中运动，为中国的未来，尽自己一份绵薄之力。在此，我庄严声明，退出中国共产党党籍，永不反悔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/24/n11676572.md#1" target="_blank">每日三退声明精选（2019/11/23）</a><br></h3>打土豪分田地，害死那么多地主，是地主错了么？
 资本主义工商业改造，害死那么多资本家，是资本家错了么？
 反右斗争，害死那么多爱国人士，是爱国人士错了么？
@@ -43,6 +44,5 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/30/n11621413.md#1" target="_blank">每日三退声明精选（2019/10/29）</a><br></h3>共产党确实坏，它不仅破坏中国文化摧毁中华文明，不断的制造各种政治运动，使中国人苦难深重，现在又千方百计的欺诈老百姓，用老百姓的钱粉饰大好形势，对善良法轮功残酷迫害，这都是邪恶党的本性决定的，现在我申明退出党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 12:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/28/n11616747.md#1" target="_blank">每日三退声明精选（2019/10/27）</a><br></h3>我声明退出贪污成风、腐化成性、欺骗愚弄百姓、破坏社会生产力、独裁傲慢、自大膨胀、践踏法律、破坏法治环境、倒行逆施、封建复辟、蔑视生命、颠倒黑白、邪恶不赦的中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 11:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/27/n11614866.md#1" target="_blank">每日三退声明精选（2019/10/26）</a><br></h3>我今天郑重宣布退出少先队和共青团。这都要归功于我今年去海外留学，看到了真正的新闻，真正的历史。我决定切断和中共这个充满谎言的人权杀手的联系！希望民主早日光复中国大陆！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月27日 11:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/26/n11613254.md#1" target="_blank">每日三退声明精选（2019/10/25）</a><br></h3>就允许我化名李海鸥吧。我以前真的被中共骗得很惨。我真的很谢谢大纪元，因为后来翻墙看到的很多民运人士和主张独立的人士很多不讲灭共，也不肯讲反共，甚至还替中共，只有你们大纪元真正把中共和全球左翼的思潮的联系讲清楚了。谢谢你们让我看到中共的邪恶。大彻大悟的我今天在这里下定决心，彻底退出中共党团队，并且支持你们反共的行动。中共和共产邪说正如你们所说，是我们这个时代的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 10:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/nf3046_2.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/nf3046_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_2.htm">http://www.epochtimes.com/gb/nf3046_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
