--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11743071.md#1" target="_blank">中国男足年薪超日本球员4倍 收入与战绩悬殊</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11743071.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1052279716-150x120.jpg" align ="left"></a>2019全球体坛年度薪资调查报告显示，中超球员的平均薪资120余万美元，同比增长超过20%。但中国球员的高收入与球队战绩并不相符。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 11:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742705.md#1" target="_blank">鸿茅药业获明星企业奖 网民：挑战中国人智商</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742705.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/1804190305481758-150x120.jpg" align ="left"></a>曾被指为“毒酒”的“鸿茅药酒”，其公司鸿茅药业，日前被授予“2018年度履行社会责任明星企业”荣誉称号。网民嘲讽，这是在挑战中国人民的智商！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742739.md#1" target="_blank">抗争半年多 港人迎来圣诞节 叹 “太沉重”</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742739.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/photo_2019-12-23_22-12-02-150x120.jpg" align ="left"></a>12月24日是香港反送中运动持续半年多以来迎来的首个圣诞平安夜。港人表示，这个圣诞节不会快乐，但会作为发声的机会聚会互祝平安，并向失去自由的手足传递“不会忘记你们”的信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank">在家暴进化论中堕落 一本书让他翻转人生</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/140826125810100311-600x400-150x120.jpg" align ="left"></a>他经营网络赌球及百家乐博彩生意，有着稳定的下线代理和赌徒会员，还有为他算账、收账、放高利贷平帐的团队，这为他带来每月好几十万的收入。更多时间，他都是在吃喝玩乐中结交人脉，为新的生意创造合作机会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:52 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752467.md#1" target="_blank">充电时手机爆炸 浙江男子被烧致面目全非</a><br></h3>近日，浙江海宁市民王先生半躺在床上休息时，拿起正放在床头柜上充电的手机，就在他拿起手机的一刹那，手机突然发生爆炸，致使他身上多处被烧伤，脸部几乎面目全非。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751100.md#1" target="_blank">河北公务员骗取养老金7千万 用于个人挥霍</a><br></h3>中共河北省人力资源和社会保障厅养老计发处原工作人员邓绍中贪污案的细节被曝光，指其用非法手段骗取养老金7000万余元（人民币，下同），大部分用于个人挥霍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11750711.md#1" target="_blank">每日三退声明精选（2019/12/27）</a><br></h3>我是一名普通的企业员工，10多年前领导让我加入中共邪党，我没有答应。因为我深知恶党的邪恶，心里深深的抵触它。今年在我不知情的情况下，领导开会通过了我入党的决定。事后以政治任务通知我参加学习，我内心无比痛苦，不想加入这邪恶的组织。现在我郑重提出退出中国共产邪党、中国共青团、中国少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 11:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748143.md#1" target="_blank">每日三退声明精选（2019/12/26）</a><br></h3>中共的各级官员不但个个都是贪污犯盗国贼，还要利用手中控制的媒体网路五毛来带节奏维护其一党独裁专制，在没有言论自由的大环境下还要严控意识形态，彻底看清共产党的流氓无赖嘴脸，声明退出共青团！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 10:39 AM							</td></tr>
