--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,7 +30,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766254.md#1">【新闻看点】武汉肺炎是SARS？疫情扩散民恐慌</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766230.md#1">杭州政府要求全民储粮 被指转嫁粮食危机</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766097.md#1">朝鲜三分之二部长大换血 金与正再获新职</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766104.md#1">重庆大火1家6口殒命 曾绝望呼救50分钟</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766055.md#1">【珍言真语】吴明德：中共印钞票被走资国外</a><br>
@@ -47,7 +47,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765978.md#1">北京法轮功学员 认证专家侯俊文遭迫害离世</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766183.md#1">武汉爆发神秘病毒 亚洲政府保持警觉</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766037.md#1">凑成好字 40岁章子怡宣布元旦二胎产子</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765329.md#1">武汉“病毒性肺炎”病例暴增至44例</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765329.md#1">武汉“不明原因肺炎”病例暴增至44例</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765223.md#1">程晓容：党媒热捧李子柒 网红遇统战</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765144.md#1">2019大陆一线城市写字楼空置率创10年新高</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765382.md#1">云南省委办公厅前主任张朝德被查</a><br>
