--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766060.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-17_12-55-03-320x200.jpg">【新闻看点】教唆港警使阴招？北京陷两难</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766037.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/02/VCG111175203321_meitu_1-320x200.jpg">凑成好字 40岁章子怡宣布元旦二胎产子</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
@@ -30,6 +30,8 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751194.md#1">响彻在世界政坛的正义之声（下）</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766060.md#1">【新闻看点】教唆港警使阴招？北京陷两难</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766320.md#1">武汉萨斯疑云扩大 专家质疑当局隐瞒疫情</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766254.md#1">【新闻看点】武汉肺炎是SARS？官抓人 民恐慌</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766230.md#1">杭州政府要求全民储粮 被指转嫁粮食危机</a><br>
@@ -40,13 +42,11 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765657.md#1">大陆陷债务危机 台学者：或酿金融风暴</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766058.md#1">反渗透法高票通过背后 反对声雷声大雨点小</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765692.md#1">美空袭击毙伊朗军官 德英和以色列回应</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765602.md#1">武汉不明肺炎疫情 香港5例均未去疫情市场</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763818.md#1">大陆民众得福报 敬祝李洪志大师新年好</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766201.md#1">世界第三大连锁酒店“印度版Airbnb”出事</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765978.md#1">北京法轮功学员 认证专家侯俊文遭迫害离世</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766183.md#1">武汉爆发神秘病毒 亚洲政府保持警觉</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766037.md#1">凑成好字 40岁章子怡宣布元旦二胎产子</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763818.md#1">大陆民众得福报 敬祝李洪志大师新年好</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764556.md#1">【翻墙必看】分析：川普击碎中共的拖延术</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765329.md#1">武汉“不明原因肺炎”病例暴增至44例</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765223.md#1">程晓容：党媒热捧李子柒 网红遇统战</a><br>
