--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766425.md#1">山西退伍军人死于非命 遗体吊在信访局门外</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766361.md#1">港警成动荡原因 独立调查委暂无望 廉署介入</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766347.md#1">《亚洲周刊》捧港警 作家董启章羞与为伍</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751194.md#1">响彻在世界政坛的正义之声（下）</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766104.md#1">重庆大火1家6口殒命 曾绝望呼救50分钟</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766055.md#1">【珍言真语】吴明德：中共印钞票被走资国外</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766062.md#1">无人机炸死伊朗将军 川普首发推道缘由</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765657.md#1">大陆陷债务危机 台学者：或酿金融风暴</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766201.md#1">世界第三大连锁酒店“印度版Airbnb”出事</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765978.md#1">北京法轮功学员 认证专家侯俊文遭迫害离世</a><br>
