--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -31,7 +31,7 @@
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765922.md#1">王赫：中国经济乱象纷呈 中共束手无策</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766445.md#1">中共ETC糗事：拦急救车 无高速却被分指标</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766445.md#1">中共高速收费糗事：拦急救车  无高速路也得办卡</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766535.md#1">纽约加强治安防伊朗 增加地铁站搜包安检</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766515.md#1">传武汉已掌握新病毒 港府急应变拟升级防疫</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766426.md#1">习近平与林郑新年致辞有难言之隐？专家解读</a><br>
