--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766583.md#1">为何中国滑雪队的要求遭挪威图书馆强烈拒绝</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766427.md#1">张林：共军在朝鲜战争中丧生两百万（2）</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766288.md#1">王友群：如何看中美将签署第一阶段贸易协议</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766346.md#1">颜丹：是谁造出了“善小而不为”的中国人？</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764288.md#1">东方觉：犯罪集团之恶与“保护伞”之黑</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763805.md#1">【名家专栏】写在《五月花号公约》400周年</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763884.md#1">周晓辉：川普下通牒 北京纠结三大难题</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761363.md#1">【名家专栏】中共式审查制度正向世界扩散</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
