--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766848.md#1">唐风：温哥华中学生课堂讲香港被踢下体之思考</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766583.md#1">为何中国滑雪队的要求遭挪威图书馆强烈拒绝</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766427.md#1">张林：共军在朝鲜战争中丧生两百万（2）</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766288.md#1">王友群：如何看中美将签署第一阶段贸易协议</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754433.md#1">俞晓薇：明慧新年祝福值得中国和世界深思</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764288.md#1">东方觉：犯罪集团之恶与“保护伞”之黑</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763805.md#1">【名家专栏】写在《五月花号公约》400周年</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763884.md#1">周晓辉：川普下通牒 北京纠结三大难题</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,189,110 人
+- 共 349,189,925 人
 ```
 </strong>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
