--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -23,9 +23,18 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741306.md#1" target="_blank">王友群：中共“战狼外交”在瑞典踢到铁板</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741306.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1182587939-600x400-150x120.jpg" align ="left"></a>2019年，是中共“战狼外交”又一年。其中，最典型的代表人物，莫过于中共驻瑞典大使桂从友了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:38 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741286.md#1" target="_blank">张菁：山西农村封炉封灶尽显中共无良</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741286.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/84ba374e317fd1b46d0d1b913852bbad-600x400-150x120.jpg" align ="left"></a>共产党建政70年来，传统的信仰和价值观被强力破坏了，可见如果想拥有心中的自由和幸福，拥有不被控制的真正人的生活，必须得去除共产党的因素。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740733.md#1" target="_blank">谢田：新冷战和旧冷战的三大不同</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1177975938-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>当今世界从政界到知识界、商界、业界，人们普遍认为，美国和中共的对峙，近年来已全面展开、迅速升级，可称之为一场新的冷战了。史丹佛大学胡佛研究所尼尔．弗格森（Niall Ferguson）研究员认为，第二次冷战在未来历史学家的眼里，会是从2019年开始的。在笔者看来，新冷战最明确的信号，应该是北大西洋公约组织（北约）在伦敦.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 1:29 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740076.md#1" target="_blank">程晓容：上海囚徒求救信再揭中共奴工黑幕</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740076.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/2019-5-21-fox-11-program_08-ss-150x120.jpg" align ="left"></a>求救信见诸媒体的同一天，卡片销售商、英国最大零售商乐购（Tesco）迅速做出回应，宣布暂时停止在中国的一家工厂的生产，并展开调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:24 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739433.md#1" target="_blank">隋志：调查活摘器官 科学家入榜“十大”</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/3-23-1-150x120.jpg" align ="left"></a>近日全球知名的《自然》杂志网站，发表了二零一九年对科学最具影响力的十大科学家，其中包括找出新方法、揭露中共从事非法器官移植的澳大利亚麦格理大学（Macquarie University）临床伦理学教授温蒂?罗杰斯（Wendy Rogers）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 6:13 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740049.md#1" target="_blank">吴惠林：有感于2019年诺贝尔经济学奖</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740049.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1175845229-600x400-150x120.jpg" align ="left"></a>10月14日，2019年诺贝尔奖最后一个奖项—经济学奖得主揭晓，由美、法三位学者合得。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 6:10 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11744948.md#1" target="_blank">云鹤天：《采桑子?重阳》新解</a><br></h3>贪官污吏黄赌毒，你也寻芳，他也寻芳，罂粟花儿分外香。
+今年过得真没劲，输得精光，陪得精光，贸战香江雪上霜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 7:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11744758.md#1" target="_blank">文武：弹劾川普是在帮中共的忙</a><br></h3>前几天我有个认识的人，突然跑到我的工作室来，说美国总统川普被弹劾了，川普下台了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 6:16 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11744745.md#1" target="_blank">郑纯清：从“挨门砸饭锅”到“挨户堵炉眼”</a><br></h3>二零二零年，实现小康年。
+小康什么样？前后比比看。
+一九五八年，跑步奔共产。
+锅灶挨门砸，碎铁土炉炼。
+公社大食堂，同吃大锅饭。
+胆敢不服从，斥给党捣乱。
+划为坏分子，狗头给砸烂。
+好锅变废渣，饿死几千万。
+都笑荒诞剧，谁料今重演？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11744701.md#1" target="_blank">吕锡民：台湾是否加入RCEP的研议</a><br></h3>区域全面经济伙伴关系协定（Regional Comprehensive Economic Partnership，RCEP）历经7年28回合谈判，已在今（2019）年11月宣布完成协议，明（2020）年即将正式签署。RCEP是由东南亚国家协会十国（ASEAN）发起，由中国、日本、韩国、印度、澳洲、纽西兰等，与东盟有FT.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11744185.md#1" target="_blank">陈思敏：中国经济好坏 国企利润透端倪</a><br></h3>12月23日，中共财政部公布今年前11个月全国（中央和地方）国有及国有控股企业（不含国有一级金融企业在内）主要经济指标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11744054.md#1" target="_blank">田园：请进化论信徒提供进化论的证据</a><br></h3>如果你和进化论信徒讨论生命是否神创，他们通常会问你：你有证据吗？创世纪神话以及宗教经典不能算作证据。一般来说，谈话会就此结束。进化论信徒会洋洋自得：我们赢了，科学再一次战胜迷信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 12:35 PM			</td></tr>
