--- a/gb/ncid278_3.md
+++ b/gb/ncid278_3.md
@@ -1,11 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743998.md#1" target="_blank">假疫苗受害儿豆豆走了 陕西当局屏蔽讯息</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743998.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__5898248-600x400-150x120.jpg" align ="left"></a>陕西凤县5岁女孩雷鑫睿(小名豆豆)，11个月大时打了一剂武汉生物出产的A群流脑疫苗后，导致四肢瘫痪、意识丧失、眼睛失明。在病痛中痛苦折磨了四年，于上周二永远离开了这个世界。到最后一刻仍然得不到一个公道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743804.md#1" target="_blank">【拍案惊奇】不平夜全港乱战 传2人坠楼警在场</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743804.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191225666-150x120.jpg" align ="left"></a>正如大家在新闻上看到的，本来是平安夜，和开心的圣诞节日，但香港街头并不平安。这场抗争运动已经快满7个月了，从当晚的情况来看，势必要延续到新年。那么今天的节目，我们还是以专题形式推出，来回顾这一夜在香港，都发生了什么。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:19 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741100.md#1" target="_blank">人权问责法效应 中共迫害者被举报到海外</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-18-150x120.jpg" align ="left"></a>自《通告》发布后，明慧网收到大量的对参与迫害法轮功的中共高官、政法委和“610”人员、法官、检察官、派出所所长等等的举报信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741511.md#1" target="_blank">逆势而行 亲共份子再次干扰神韵演出</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912242112322003-150x120.jpg" align ="left"></a>在美国清理中共代理人，保护宗教信仰自由、追查迫害信仰者责任之时，李华红等纽约亲共分子再次露面干扰神韵演出。
-
-12月20至22日，神韵国际艺术团在纽约州帕切斯市的帕切斯学院表演艺术中心（The Performing Arts Center at Purchase College）拉开2020新演季帷幕。神韵今年的全新节目同样给新老观众带来惊喜，他们对每一.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11741818.md#1" target="_blank">中共否认强制外籍囚犯劳动 狡辩难掩罪行</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11741818.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-80154634-150x120.jpg" align ="left"></a>中共一句“负责任地告诉你”，非但不会消除外界的疑虑，反而证实了指控的真实性。因为中共玩弄法律、谎话连篇、突破道德良知底线，完全不负责任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:57 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">中共侵犯宗教自由 美国宣布将持续追责</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/01-2-150x120.jpg" align ="left"></a>美国国务院12月20日发布新闻通告表示，美国对包括中共和中共官员在内的侵犯宗教自由者采取持续追责行动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741441.md#1" target="_blank">圣诞卡求救信 曾被迫害英记者透露更多细节</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741441.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-71081666-150x120.jpg" align ="left"></a>上周末，一张圣诞卡求救信揭发中国上海青浦监狱强制囚犯工作的内幕，引起全球关注。周一，曾在大陆经历类似遭遇的当事人透露更多细节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741039.md#1" target="_blank">澳门实施“安全法” 恐落入中共监控系统</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741039.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188813067-1-150x120.jpg" align ="left"></a>澳门主权移交20年，《网络安全法》开始实施。外界关注，鉴于国内省份早已成立“网络斗争指挥中心”，澳门不断向中国大陆看齐、一致，完全内地化，一国两制已不复存在。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:44 AM							</td></tr>
@@ -26,7 +19,12 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/20/n11736211.md#1" target="_blank">仿效香港抗争 网民发起非暴力罢用微信行动</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/20/n11736211.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-478009091-150x120.jpg" align ="left"></a>圣诞节临近，中共要求中国人从网络到社区不过圣诞节，而网友则发起“圣诞快乐，抵制微信”的全民非暴力行动试水。网友们相约在12月25日一起来做一件事：圣诞节这一天，不登录、不支付。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11731126.md#1" target="_blank">【名家专栏】中共一胎化警示集体主义之邪恶</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11731126.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1312311127531528-150x120.jpg" align ="left"></a>今年，中共最骇人的“一胎化”公共政策已迈入40周年。幸运的是，《独生之国》这部新纪录片，揭开了这个残酷计划40年来的阴暗面纱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/6/n11706347.md#1" target="_blank">反送中和六四事件 美政府应对措施对比</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/6/n11706347.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280850072188-150x120.jpg" align ="left"></a>美国政界对香港的支持远远超过30年前，《香港人权与民主法案》从提出到最后成为法律历时不到半年，比1992年的《美国-香港法案》所耗时间短了一半，同时总统也在更短时间内签字、让法案生效。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 10:11 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740664.md#1" target="_blank">法轮功学员孙凤华遭绑架命危 数月后离世</a><br></h3>哈尔滨市法轮功学员孙凤华于9月11日被哈尔滨市铁路公安局直属派出所警察绑架，当时血压高达240，出现生命危险。第二天警察通知家属把她接走。回家3个月后，她于12月9日离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11733542.md#1" target="_blank">律师：为法轮功学员做无罪辩护没有错</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11733542.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/08151-150x120.jpg" align ="left"></a>明慧网12月20日刊登大陆来稿，讲的是，近期一位律师在法庭上为法轮功学员做无罪辩护，被法官多次打断和阻止，不许做无罪辩护。律师依照法律驳斥了法官的无理要求。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:29 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/20/n11734006.md#1" target="_blank">【拍案惊奇】抗争风悄然北上 香港星火被盯上</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/20/n11734006.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1f0b4deba791e_ttl7dayDRH_tn1-FB__-150x120.jpg" align ="left"></a>先要讲到的是，最近大陆发生的两件事，证明反送中这个香港式的抗争风潮，已经悄然吹进大陆。一件发生在大学“复旦”，另一件，发生在广东小镇“播扬”，这两个地方的名字就很有内涵。但与此同时呢，香港资金援助抗争者的“星火同盟”出事了，有4个相关的人被逮捕，“星火同盟”背后的支持者，大多是“和理非”抗争人士，人们担心，这些和理非的个人信息会被警方掌握。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/20/n11734074.md#1" target="_blank">英国上议院会议 医生斥港警对救援人员施暴</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/20/n11734074.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/12-150x120.jpeg" align ="left"></a>12月18日下午，由“香港监察”（Hong Kong Watch）赞助人、英国利物浦奥尔顿勋爵（Lord Alton of Liverpool）在英国上议院举行会议上，听取在英国医生讲述港府侵犯医护人员等违背国际原则的行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11733696.md#1" target="_blank">沈阳研究生遭同学砍断肌腱 报案3个月无果</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11733696.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/222-150x120.jpg" align ="left"></a>因奖学金评定发生矛盾，沈阳大学一名在读硕士研究生遭多名同学捅伤，大腿肌腱被砍断，报案三个月无果，痛苦中无奈到网上发帖爆光，引发舆情关注后，警方方回应称正在抓捕犯罪嫌疑人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 7:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11730975.md#1" target="_blank">德国政要支持民众《人权问责法》在线请愿</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11730975.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/PfMd-150x120.jpeg" align ="left"></a>12月1日至30日，德国民众发起在线征签活动，敦促德国议会通过《全球马格尼茨基人权问责法案》。德国国会议员乌莉?尼森（Ulli Nissen）女士力挺该请愿并呼吁民众签名支持。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 1:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11733201.md#1" target="_blank">惧反送中蔓延至大陆 粤大学禁学生年底聚会</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11733201.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/guangdong-150x120.png" align ="left"></a>香港反送中民主运动持续半年未息， 广东省茂名修建火葬场的抗争不断，令中共高度紧张。此前曾发生左翼学生集会的广东工业大学发布通告，禁止学生年底在食堂聚会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/22/n11738747.md#1" target="_blank">密山市委前副书记李连春回国投案 被起诉</a><br></h3>近日，中共媒体报导，2019年9月24日，外逃职务犯罪嫌疑人李连春主动回国投案，并已退出大部分贪污所得赃款。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 3:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/22/n11738464.md#1" target="_blank">内蒙古赤峰至少31名法轮功学员身陷囹圄</a><br></h3>2019年年末，赤峰地区至少有30名法轮功学员被非法关押在内蒙古赤峰第四监狱和内蒙古呼市女子监狱遭受迫害，还有一人不知被转到哪所监狱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 10:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/21/n11737459.md#1" target="_blank">超时加班和抑郁 长安福特30岁工程师跳楼亡</a><br></h3>12月20日，一条题为《长安福特AE工程师之死》的文章在网上广泛传播。文章作者称自己的丈夫邓某某为长安福特汽车有限公司一名工程师，入职8年，由于工作压力大，持续加班患上抑郁症，年仅30岁抑郁跳楼身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:58 AM							</td></tr>
