--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766999.md#1">中共警察强制中小学男生抽血 建DNA数据库</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766694.md#1">【翻墙必看】中共公安官员自相残杀的背后</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766872.md#1">武汉肺炎疫情还未了 大陆多地又爆发流感</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766821.md#1">美伊冲突 专家：北京陷内困无瑕顾及伊朗</a><br>
@@ -41,8 +42,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766426.md#1">习近平与林郑新年致辞有难言之隐？专家解读</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766425.md#1">山西退伍军人死于非命 遗体吊在信访局门外</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766398.md#1">杨宁：公安内部现惨案 官员自相残杀难休止</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766361.md#1">港警成动荡原因 独立调查委暂无望 廉署介入</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766814.md#1">楼市趋冷 北京760万二手房两个月降170万</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766814.md#1">楼市趋冷 北京760万元二手房两月降170万</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766842.md#1">新年伊始茅台连跌两日 市值蒸发1300亿</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766574.md#1">除掉伊朗二号人物 川普：为了止战非宣战</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766192.md#1">麦康奈尔：弹劾案轮到参院上场 会冷静判断</a><br>
