--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -16,7 +16,6 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751030.md#1" target="_blank">从原昆明市中级法院杨晓萍面临国际制裁说起</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751030.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_59193608_Subscription_L-600x400-150x120.jpg" align ="left"></a>今年5月，美国政府告知法轮功学员及其它信仰团体，称美国将更加严格审核签证申请，对人权及宗教迫害者拒发签证，包括移民签证和非移民签证（如旅游、探亲、商务等），已发签证者，包括“绿卡”持有者，也可能被拒绝入境。这些人权迫害者的配偶、子女亦在惩罚之列。因此让法轮功学员向美国政府提供迫害者名单、信息。依据美国的《全球马格尼茨基.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751027.md#1" target="_blank">程晓容：法制人权黑暗年 2019的中国故事</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751027.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-77223993-150x120.jpg" align ="left"></a>要想了解中国，不应听信中共兜售的故事，因为那些章节里的鲜花和光环，碾碎了几代中国人的权利和幸福、还企图淹没苦难中的呐喊和抗争。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751013.md#1" target="_blank">廖祖笙：周永康余孽在不断寻衅滋事</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751013.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/12/li-chuncheng1_CFP392778946_4-2-150x120.jpg" align ="left"></a>习近平先生，海内外曾为周永康的坐穿牢底一片欢呼，事实说明华人世界未免欢呼得早了些。这“国”直到今天为止，也还是这般“法治”局面。周永康的被法办与否，于国于民有何区别？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 2:29 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756476.md#1" target="_blank">谭笑飞：2020，中共向地狱裸奔</a><br></h3>圣诞前夕，一名英国小女孩在产自中国的圣诞卡中发现了上海囚犯的求救信，中共外交部发言人耿爽宣称这是记者“编造的闹剧”。这令笔者联想到了加拿大人权律师大卫·麦塔斯先生的一句话。麦塔斯先生和大卫·乔高先生的独立调查取得的一条完整的证据链证实，中共一直在大规模活摘法轮功学员的器官。调查报告发布之后，中共也拼凑了一个所谓的调查报.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 10:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754518.md#1" target="_blank">李小刚：量子共振检测与中共的脑控武器</a><br></h3>目前，量子医学的研究已经取得了很大的进展，量子共振检测仪也被应用在精神疾病的诊断以及其他领域，那么量子共振检测仪的诊断原理是什么，下面对其原理作以简要介绍，以下介绍量子共振检测仪原理的内容是对网络资源加以整合后的结果，以求尽可能全面地、言简意赅地揭示量子共振检测仪的原理。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 3:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754469.md#1" target="_blank">祝君安：魔共百变亦是魔</a><br></h3>文革腥风刮六四，活摘魔爪伸维族；
 吸干膏脂养妖兽，更渗全球蜇虺毒；
@@ -65,5 +64,9 @@
 游走钢丝又一年，
 平衡失，
 脚下是深渊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:34 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751007.md#1" target="_blank">云鹤天：观台湾大选</a><br></h3>一国两制门
+弄巧成拙蠢
+坑了韩国瑜
+助力蔡英文......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 2:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
